--- a/SearchCacher.csproj
+++ b/SearchCacher.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SearchCacher.UnitTests\**" />
+    <Content Remove="SearchCacher.UnitTests\**" />
+    <EmbeddedResource Remove="SearchCacher.UnitTests\**" />
+    <None Remove="SearchCacher.UnitTests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CryLib.Core" Version="3.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
     <PackageReference Include="Syncfusion.Blazor" Version="25.1.35" />
