--- a/SearchCacher.csproj
+++ b/SearchCacher.csproj
@@ -1,24 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="SearchCacher.UnitTests\**" />
-    <Content Remove="SearchCacher.UnitTests\**" />
-    <EmbeddedResource Remove="SearchCacher.UnitTests\**" />
-    <None Remove="SearchCacher.UnitTests\**" />
-  </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+		<RunAOTCompilation>true</RunAOTCompilation>
+		<WasmStripILAfterAOT>true</WasmStripILAfterAOT>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CryLib.Core" Version="3.0.2" />
-    <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
-    <PackageReference Include="Syncfusion.Blazor" Version="25.1.35" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.35" />
-    <PackageReference Include="Syncfusion.Licensing" Version="25.1.35" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="SearchCacher.UnitTests\**" />
+		<Content Remove="SearchCacher.UnitTests\**" />
+		<EmbeddedResource Remove="SearchCacher.UnitTests\**" />
+		<None Remove="SearchCacher.UnitTests\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="CryLib.Core" Version="3.0.2" />
+		<PackageReference Include="StackExchange.Redis" Version="2.7.33" />
+		<PackageReference Include="Syncfusion.Blazor" Version="25.1.35" />
+		<PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.35" />
+		<PackageReference Include="Syncfusion.Licensing" Version="25.1.35" />
+	</ItemGroup>
 
 </Project>
