--- a/SearchCacher.csproj
+++ b/SearchCacher.csproj
@@ -19,6 +19,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove=".gitattributes" />
+	  <None Remove=".gitignore" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CryLib.Core" Version="3.0.2" />
 		<PackageReference Include="StackExchange.Redis" Version="2.7.33" />
 		<PackageReference Include="Syncfusion.Blazor" Version="25.1.35" />
