--- a/SearchCacher.csproj
+++ b/SearchCacher.csproj
@@ -26,6 +26,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CryLib.Core" Version="3.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.7.33" />
 		<PackageReference Include="Syncfusion.Blazor" Version="25.1.42" />
 		<PackageReference Include="Syncfusion.Blazor.Themes" Version="25.1.42" />
