Made project visible to performance test project and added some DB init tests

--- a/SearchCacher.csproj
+++ b/SearchCacher.csproj
@@ -28,6 +28,10 @@
 	  <None Remove=".gitignore" />
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<InternalsVisibleTo Include="SearchCacher.PerformanceTests" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="CryLib.Core" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.1" />
