--- a/SearchCacher.PerformanceTests/SearchCacher.PerformanceTests.csproj
+++ b/SearchCacher.PerformanceTests/SearchCacher.PerformanceTests.csproj
@@ -12,4 +12,14 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SearchCacher.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="words_alpha.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
